# Syn-pse

./: README.md
synapse/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
synapse/src/: App.tsx  index.css
synapse/src-tauri/: Cargo.toml  tauri.conf.json
synapse/src-tauri/capabilities/: default.json
synapse/src-tauri/src/: lib.rs  main.rs  settings.rs
synapse/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  index.tsx
synapse/src/components/settings/: SettingsModal.tsx
synapse/src/store/: settingsStore.ts
synapse/src/types/: chat.ts  settings.ts
